finish topbar and fixes sidebar alignment

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -40,7 +40,7 @@
   font-size: 37px;
 }
 
-#social ul {
+#social {
   list-style-type: none;
   padding: 0px;
   margin-left: 0px;
