--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -28,3 +28,9 @@ body {
   position: relative;
   margin-top: 41px;
 }
+
+a:hover {
+  color: #000000;
+  border-bottom: thick solid #A22921;
+}
+
